code/WasmParser/parser/poclang_parser.go
// Code generated from PocLang.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // PocLang

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "", "'return'", "'var'", "'function'", "'if'", "'else'",
	"':'", "", "'uint'", "'string'", "'bool'", "'void'", "'true'", "'false'",
	"", "", "", "", "'=='", "", "", "", "", "'{'", "'}'", "", "'!'", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "'|'", "'^'",
}
var symbolicNames = []string{
	"", "INT", "MULTIPLY", "ADD", "SUBTRACT", "DIVIDE", "RETURN", "VAR", "FUNCTION",
	"IF", "ELSE", "COLON", "SPACE", "UINT_T", "STRING_T", "BOOL_T", "VOID_T",
	"TRUE_LIT", "FALSE_LIT", "GT_CONDITION", "GE_CONDITION", "LT_CONDITION",
	"LE_CONDITION", "EQ_CONDITION", "EQ_ASSIGNMENT", "BEGIN_CONSTRAINT", "BEGIN_GROUP",
	"END_GROUP", "BEGIN_BODY", "END_BODY", "IDENTIFIER", "JAVA_BEGIN", "JAVA_SEP",
	"WS", "COMMENT_LINE", "NEWLINE", "ARG_SEP", "STRING_LITERAL", "BEGIN_RE_RANGE",
	"END_RE_RANGE", "CHARACTER", "BEGIN_RE_GROUP", "END_RE_GROUP", "MINUS",
	"DOT", "STAR", "PLUS", "ALTERNATION", "RANGE_NEGATE", "RE_DELIMITER_CLOSE",
	"META_CHAR", "RANGE_SEPARATOR", "RANGE_CHARACTER", "RANGE_TERMINATE", "GT",
	"GE", "LT", "LE", "EQ", "CONSTRAINT_UINT", "CONSTRAINT_SPACE", "RE_DELIMITER_OPEN",
	"END_CONSTRAINT",
}

var ruleNames = []string{
	"body", "function_body", "body_line", "return_stmt", "if_stmt", "optional_else",
	"var_decl", "type_keyword", "type_specifier", "int_constraint", "string_constraint",
	"function_sig", "argument_decl", "function", "program", "expr", "var_assignment",
	"value_ref", "identifier_ref", "function_call", "java_call", "re", "union_prime",
	"simple_re", "concat_prime", "basic_re", "kleene_star", "plus", "elementary_re",
	"group", "range_re", "positive_range", "negative_range", "lax_character",
	"character", "range_items", "range_item",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type PocLang struct {
	*antlr.BaseParser
}

func NewPocLang(input antlr.TokenStream) *PocLang {
	this := new(PocLang)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "PocLang.g4"

	return this
}

// PocLang tokens.
const (
	PocLangEOF                = antlr.TokenEOF
	PocLangINT                = 1
	PocLangMULTIPLY           = 2
	PocLangADD                = 3
	PocLangSUBTRACT           = 4
	PocLangDIVIDE             = 5
	PocLangRETURN             = 6
	PocLangVAR                = 7
	PocLangFUNCTION           = 8
	PocLangIF                 = 9
	PocLangELSE               = 10
	PocLangCOLON              = 11
	PocLangSPACE              = 12
	PocLangUINT_T             = 13
	PocLangSTRING_T           = 14
	PocLangBOOL_T             = 15
	PocLangVOID_T             = 16
	PocLangTRUE_LIT           = 17
	PocLangFALSE_LIT          = 18
	PocLangGT_CONDITION       = 19
	PocLangGE_CONDITION       = 20
	PocLangLT_CONDITION       = 21
	PocLangLE_CONDITION       = 22
	PocLangEQ_CONDITION       = 23
	PocLangEQ_ASSIGNMENT      = 24
	PocLangBEGIN_CONSTRAINT   = 25
	PocLangBEGIN_GROUP        = 26
	PocLangEND_GROUP          = 27
	PocLangBEGIN_BODY         = 28
	PocLangEND_BODY           = 29
	PocLangIDENTIFIER         = 30
	PocLangJAVA_BEGIN         = 31
	PocLangJAVA_SEP           = 32
	PocLangWS                 = 33
	PocLangCOMMENT_LINE       = 34
	PocLangNEWLINE            = 35
	PocLangARG_SEP            = 36
	PocLangSTRING_LITERAL     = 37
	PocLangBEGIN_RE_RANGE     = 38
	PocLangEND_RE_RANGE       = 39
	PocLangCHARACTER          = 40
	PocLangBEGIN_RE_GROUP     = 41
	PocLangEND_RE_GROUP       = 42
	PocLangMINUS              = 43
	PocLangDOT                = 44
	PocLangSTAR               = 45
	PocLangPLUS               = 46
	PocLangALTERNATION        = 47
	PocLangRANGE_NEGATE       = 48
	PocLangRE_DELIMITER_CLOSE = 49
	PocLangMETA_CHAR          = 50
	PocLangRANGE_SEPARATOR    = 51
	PocLangRANGE_CHARACTER    = 52
	PocLangRANGE_TERMINATE    = 53
	PocLangGT                 = 54
	PocLangGE                 = 55
	PocLangLT                 = 56
	PocLangLE                 = 57
	PocLangEQ                 = 58
	PocLangCONSTRAINT_UINT    = 59
	PocLangCONSTRAINT_SPACE   = 60
	PocLangRE_DELIMITER_OPEN  = 61
	PocLangEND_CONSTRAINT     = 62
)

// PocLang rules.
const (
	PocLangRULE_body              = 0
	PocLangRULE_function_body     = 1
	PocLangRULE_body_line         = 2
	PocLangRULE_return_stmt       = 3
	PocLangRULE_if_stmt           = 4
	PocLangRULE_optional_else     = 5
	PocLangRULE_var_decl          = 6
	PocLangRULE_type_keyword      = 7
	PocLangRULE_type_specifier    = 8
	PocLangRULE_int_constraint    = 9
	PocLangRULE_string_constraint = 10
	PocLangRULE_function_sig      = 11
	PocLangRULE_argument_decl     = 12
	PocLangRULE_function          = 13
	PocLangRULE_program           = 14
	PocLangRULE_expr              = 15
	PocLangRULE_var_assignment    = 16
	PocLangRULE_value_ref         = 17
	PocLangRULE_identifier_ref    = 18
	PocLangRULE_function_call     = 19
	PocLangRULE_java_call         = 20
	PocLangRULE_re                = 21
	PocLangRULE_union_prime       = 22
	PocLangRULE_simple_re         = 23
	PocLangRULE_concat_prime      = 24
	PocLangRULE_basic_re          = 25
	PocLangRULE_kleene_star       = 26
	PocLangRULE_plus              = 27
	PocLangRULE_elementary_re     = 28
	PocLangRULE_group             = 29
	PocLangRULE_range_re          = 30
	PocLangRULE_positive_range    = 31
	PocLangRULE_negative_range    = 32
	PocLangRULE_lax_character     = 33
	PocLangRULE_character         = 34
	PocLangRULE_range_items       = 35
	PocLangRULE_range_item        = 36
)

// IBodyContext is an interface to support dynamic dispatch.
type IBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBodyContext differentiates from other interfaces.
	IsBodyContext()
}

type BodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBodyContext() *BodyContext {
	var p = new(BodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PocLangRULE_body
	return p
}

func (*BodyContext) IsBodyContext() {}

func NewBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BodyContext {
	var p = new(BodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PocLangRULE_body

	return p
}

func (s *BodyContext) GetParser() antlr.Parser { return s.parser }

func (s *BodyContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(PocLangNEWLINE)
}

func (s *BodyContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(PocLangNEWLINE, i)
}

func (s *BodyContext) AllCOMMENT_LINE() []antlr.TerminalNode {
	return s.GetTokens(PocLangCOMMENT_LINE)
}

func (s *BodyContext) COMMENT_LINE(i int) antlr.TerminalNode {
	return s.GetToken(PocLangCOMMENT_LINE, i)
}

func (s *BodyContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(PocLangWS)
}

func (s *BodyContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(PocLangWS, i)
}

func (s *BodyContext) AllBody_line() []IBody_lineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IBody_lineContext)(nil)).Elem())
	var tst = make([]IBody_lineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IBody_lineContext)
		}
	}

	return tst
}

func (s *BodyContext) Body_line(i int) IBody_lineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBody_lineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IBody_lineContext)
}

func (s *BodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.EnterBody(s)
	}
}

func (s *BodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.ExitBody(s)
	}
}

func (s *BodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PocLangVisitor:
		return t.VisitBody(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PocLang) Body() (localctx IBodyContext) {
	localctx = NewBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PocLangRULE_body)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la-6)&-(0x1f+1)) == 0 && ((1<<uint((_la-6)))&((1<<(PocLangRETURN-6))|(1<<(PocLangVAR-6))|(1<<(PocLangIF-6))|(1<<(PocLangIDENTIFIER-6))|(1<<(PocLangJAVA_BEGIN-6))|(1<<(PocLangWS-6))|(1<<(PocLangCOMMENT_LINE-6))|(1<<(PocLangNEWLINE-6)))) != 0 {
		p.SetState(89)
		p.GetErrorHandler().Sync(p)
		switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
		case 1:
			p.SetState(75)
			p.GetErrorHandler().Sync(p)

			if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
				{
					p.SetState(74)
					p.Match(PocLangWS)
				}

			}
			p.SetState(78)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<PocLangRETURN)|(1<<PocLangVAR)|(1<<PocLangIF)|(1<<PocLangIDENTIFIER)|(1<<PocLangJAVA_BEGIN))) != 0 {
				{
					p.SetState(77)
					p.Body_line()
				}

			}
			p.SetState(81)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == PocLangWS {
				{
					p.SetState(80)
					p.Match(PocLangWS)
				}

			}
			{
				p.SetState(83)
				p.Match(PocLangNEWLINE)
			}

		case 2:
			p.SetState(85)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == PocLangWS {
				{
					p.SetState(84)
					p.Match(PocLangWS)
				}

			}
			{
				p.SetState(87)
				p.Match(PocLangCOMMENT_LINE)
			}
			{
				p.SetState(88)
				p.Match(PocLangNEWLINE)
			}

		}

		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IFunction_bodyContext is an interface to support dynamic dispatch.
type IFunction_bodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunction_bodyContext differentiates from other interfaces.
	IsFunction_bodyContext()
}

type Function_bodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunction_bodyContext() *Function_bodyContext {
	var p = new(Function_bodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PocLangRULE_function_body
	return p
}

func (*Function_bodyContext) IsFunction_bodyContext() {}

func NewFunction_bodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Function_bodyContext {
	var p = new(Function_bodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PocLangRULE_function_body

	return p
}

func (s *Function_bodyContext) GetParser() antlr.Parser { return s.parser }

func (s *Function_bodyContext) Body() IBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *Function_bodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Function_bodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Function_bodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.EnterFunction_body(s)
	}
}

func (s *Function_bodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.ExitFunction_body(s)
	}
}

func (s *Function_bodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PocLangVisitor:
		return t.VisitFunction_body(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PocLang) Function_body() (localctx IFunction_bodyContext) {
	localctx = NewFunction_bodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PocLangRULE_function_body)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(94)
		p.Body()
	}

	return localctx
}

// IBody_lineContext is an interface to support dynamic dispatch.
type IBody_lineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBody_lineContext differentiates from other interfaces.
	IsBody_lineContext()
}

type Body_lineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBody_lineContext() *Body_lineContext {
	var p = new(Body_lineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PocLangRULE_body_line
	return p
}

func (*Body_lineContext) IsBody_lineContext() {}

func NewBody_lineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Body_lineContext {
	var p = new(Body_lineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PocLangRULE_body_line

	return p
}

func (s *Body_lineContext) GetParser() antlr.Parser { return s.parser }

func (s *Body_lineContext) Var_assignment() IVar_assignmentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVar_assignmentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVar_assignmentContext)
}

func (s *Body_lineContext) Return_stmt() IReturn_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IReturn_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IReturn_stmtContext)
}

func (s *Body_lineContext) Var_decl() IVar_declContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVar_declContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVar_declContext)
}

func (s *Body_lineContext) Function_call() IFunction_callContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunction_callContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunction_callContext)
}

func (s *Body_lineContext) If_stmt() IIf_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIf_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIf_stmtContext)
}

func (s *Body_lineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Body_lineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Body_lineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.EnterBody_line(s)
	}
}

func (s *Body_lineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.ExitBody_line(s)
	}
}

func (s *Body_lineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PocLangVisitor:
		return t.VisitBody_line(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PocLang) Body_line() (localctx IBody_lineContext) {
	localctx = NewBody_lineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PocLangRULE_body_line)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(101)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(96)
			p.Var_assignment()
		}

	case 2:
		{
			p.SetState(97)
			p.Return_stmt()
		}

	case 3:
		{
			p.SetState(98)
			p.Var_decl()
		}

	case 4:
		{
			p.SetState(99)
			p.Function_call()
		}

	case 5:
		{
			p.SetState(100)
			p.If_stmt()
		}

	}

	return localctx
}

// IReturn_stmtContext is an interface to support dynamic dispatch.
type IReturn_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsReturn_stmtContext differentiates from other interfaces.
	IsReturn_stmtContext()
}

type Return_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyReturn_stmtContext() *Return_stmtContext {
	var p = new(Return_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PocLangRULE_return_stmt
	return p
}

func (*Return_stmtContext) IsReturn_stmtContext() {}

func NewReturn_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Return_stmtContext {
	var p = new(Return_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PocLangRULE_return_stmt

	return p
}

func (s *Return_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Return_stmtContext) RETURN() antlr.TerminalNode {
	return s.GetToken(PocLangRETURN, 0)
}

func (s *Return_stmtContext) SPACE() antlr.TerminalNode {
	return s.GetToken(PocLangSPACE, 0)
}

func (s *Return_stmtContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *Return_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Return_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Return_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.EnterReturn_stmt(s)
	}
}

func (s *Return_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.ExitReturn_stmt(s)
	}
}

func (s *Return_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PocLangVisitor:
		return t.VisitReturn_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PocLang) Return_stmt() (localctx IReturn_stmtContext) {
	localctx = NewReturn_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PocLangRULE_return_stmt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(103)
		p.Match(PocLangRETURN)
	}
	p.SetState(106)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PocLangSPACE {
		{
			p.SetState(104)
			p.Match(PocLangSPACE)
		}
		{
			p.SetState(105)
			p.expr(0)
		}

	}

	return localctx
}

// IIf_stmtContext is an interface to support dynamic dispatch.
type IIf_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIf_stmtContext differentiates from other interfaces.
	IsIf_stmtContext()
}

type If_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIf_stmtContext() *If_stmtContext {
	var p = new(If_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PocLangRULE_if_stmt
	return p
}

func (*If_stmtContext) IsIf_stmtContext() {}

func NewIf_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *If_stmtContext {
	var p = new(If_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PocLangRULE_if_stmt

	return p
}

func (s *If_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *If_stmtContext) IF() antlr.TerminalNode {
	return s.GetToken(PocLangIF, 0)
}

func (s *If_stmtContext) AllSPACE() []antlr.TerminalNode {
	return s.GetTokens(PocLangSPACE)
}

func (s *If_stmtContext) SPACE(i int) antlr.TerminalNode {
	return s.GetToken(PocLangSPACE, i)
}

func (s *If_stmtContext) BEGIN_GROUP() antlr.TerminalNode {
	return s.GetToken(PocLangBEGIN_GROUP, 0)
}

func (s *If_stmtContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *If_stmtContext) END_GROUP() antlr.TerminalNode {
	return s.GetToken(PocLangEND_GROUP, 0)
}

func (s *If_stmtContext) BEGIN_BODY() antlr.TerminalNode {
	return s.GetToken(PocLangBEGIN_BODY, 0)
}

func (s *If_stmtContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(PocLangNEWLINE, 0)
}

func (s *If_stmtContext) Body() IBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *If_stmtContext) END_BODY() antlr.TerminalNode {
	return s.GetToken(PocLangEND_BODY, 0)
}

func (s *If_stmtContext) Optional_else() IOptional_elseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOptional_elseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOptional_elseContext)
}

func (s *If_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *If_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *If_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.EnterIf_stmt(s)
	}
}

func (s *If_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PocLangListener); ok {
		listenerT.ExitIf_stmt(s)
	}
}

func (s *If_stmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PocLangVisitor:
		return t.VisitIf_stmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PocLang) If_stmt() (localctx IIf_stmtContext) {
	localctx = NewIf_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, PocLangRULE_if_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(108)
		p.Match(PocLangIF)
	}
	{
		p.SetState(109)
		p.Match(PocLangSPACE)
	}
	{
		p.SetState(110)
		p.Match(PocLangBEGIN_GROUP)
	}
	{
		p.SetState(111)
		p.expr(0)
	}
	{
		p.SetState(112)
		p.Match(PocLangEND_GROUP)
	}
	{
		p.SetState(113)
		p.Match(PocLangSPACE)
	}
	{
		p.SetState(114)
		p.Match(PocLangBEGIN_BODY)
	}
	{
		p.SetState(115)
		p.Match(PocLangNEWLINE)
	}
	{
		p.SetState(116)
		p.Body()
	}
	{
		p.SetState(117)
		p.Match(PocLangEND_BODY)
	}
	{
		p.SetState(118)
		p.Optional_else()
	}

	return localctx
}

// IOptional_elseContext is an interface to support dynamic dispatch.
type IOptional_elseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOptional_elseContext differentiates from other interfaces.
	IsOptional_elseContext()
}

type Optional_elseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOptional_elseContext() *Optional_elseContext {
	var p = new(Optional_elseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PocLangRULE_optional_else
	return p
}

func (*Optional_elseContext) IsOptional_elseContext() {}

func NewOptional_elseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Optional_elseContext {
	var p = new(Optional_elseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)
